--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-MONGO_URL=mongodb+srv://tanishqkashla11:tanishqpassword@mentora-db.dafqk.mongodb.net/?retryWrites=true&w=majority&appName=mentora-DB
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL=mongodb+srv://tanishqkashla11:tanishqpassword@mentora-db.dafqk.mongodb.net/mentora-db?retryWrites=true&w=majority&appName=mentora-DB
