--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@google/generative-ai": "^0.17.1",
     "@prisma/client": "^5.19.0",
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
